src/test/resources/scripts/language/parser/valid/expressionTuple.sbsc
let {
  a = (2 * 2, 2 + 2)
}
in true