src/test/resources/scripts/language/parser/invalid/type/genericInt.sbsc
test = (a: int<int>) -> {

};

return true;